--- a/src/modules/HomePage/components/MainSlider/MainSlider.module.scss
+++ b/src/modules/HomePage/components/MainSlider/MainSlider.module.scss
@@ -4,4 +4,16 @@
     align-items: center;
     height: 100%;
     width: 100%;
-}
+
+  &__picture{
+    display: block;
+    text-align: center;
+  }
+  &__arrowButton{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+  }
+  }
+
