--- a/src/styles/SwiperOverrides.scss
+++ b/src/styles/SwiperOverrides.scss
@@ -23,6 +23,11 @@
     .customSwiperWrapperMain{
       height: 189px;
     }
+    @include on-desktop {
+      .customSwiperWrapperMain {
+        height: 400px;
+      }
+    }
   }
 
 
