--- a/src/modules/HomePage/components/MainSlider/MainSlider.module.scss
+++ b/src/modules/HomePage/components/MainSlider/MainSlider.module.scss
@@ -1,3 +1,6 @@
+@use '../../../../shared/utils/mixins' as *;
+
+
 .MainSlider{
     display: flex;
     justify-content: center;
@@ -10,10 +13,34 @@
     text-align: center;
   }
   &__arrowButton{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
+    display: none;
+    @include on-tablet {
+      display: inline;
+      background: #3B3E4A;
+      height: 190px;
+      width: 32px;
+    }
+    @include on-desktop {
+      flex-direction: column;
+      height: 400px;
+    }
+  }
+
+  &__sliderContainer{
+
+    @include on-tablet {
+      max-width: 592px;
+      display: flex;
+      align-items: start;
+      justify-content: start;
+      margin: 0 auto;
+    }
+
+    @include on-desktop {
+      max-width: 1040px;
+      gap:16px;
+      margin: 0;
+    }
   }
   }
 
