--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -12,6 +12,10 @@
     @include on-tablet {
       padding: 13px 16px;
     }
+    @include on-desktop {
+      padding: 18px 24px;
+    }
+
   }
   &__icon{
     width: 16px;
@@ -39,6 +43,9 @@
       border: none;
       border-left: 1px solid #3B3E4A;
     }
+    @include on-desktop{
+      padding: 24px;
+    }
   }
 
   &__burgerButton {
@@ -46,7 +53,9 @@
     background: none;
     border: none;
     border-left: 1px solid #3B3E4A;
-
+    @include on-desktop{
+      padding: 24px;
+    }
     }
 
   &__headerText{
