--- a/src/modules/Catalog/components/Catalog.module.scss
+++ b/src/modules/Catalog/components/Catalog.module.scss
@@ -1,3 +1,8 @@
+//.customSelect{
+//
+//}
+
+
 .catalog{
   margin: 0 16px;
   &__locataionContaier{
@@ -81,12 +86,19 @@
 
   }
 
+  &__CustomSelect {
+    background-color: red; /* Пример изменения фона */
+  }
+
   &__paginationText{
     color:#75767F;
     font-weight: 700;
     font-size: 12px;
     line-height: 1;
   }
+
+
+
 
   &__CustomBtn{
     //display: flex;
@@ -102,10 +114,6 @@
 
   }
 
-  &__CustomBtn::after{
-     display: none;
-
-  }
 
   &__productCard{
     display: flex;
@@ -114,5 +122,5 @@
     align-items: center;
   }
 
-
 }
+
