--- a/src/shared/ProductCard/ProductCard.module.scss
+++ b/src/shared/ProductCard/ProductCard.module.scss
@@ -1,16 +1,26 @@
+@use '../../shared/utils/mixins' as *;
+
+
 .ProductCard {
   background: #161827;
-  min-width: 288px;
+  //max-width: 288px;
+  margin : 0 auto;
   width: 100%;
   height: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  //flex-direction: column;
-
-  //flex-direction: column;
   padding:  32px;
+  //@include on-tablet {
+  //  grid-template-columns: repeat(12, 1fr)
+  //}
 
-
+  &__content{
+    display: grid;
+    grid-column:  1/5;
+    //@include on-tablet {
+    //  grid-column:  1/12;
+    //}
+  }
 
   &__picture{
     object-fit: contain;
@@ -78,7 +88,6 @@
     display: flex;
     justify-content: space-between;
     margin-top: 8px;
-    margin-bottom: 32px;
   }
 
   &__button{
@@ -91,9 +100,6 @@
   }
 
   &__icon{
-    width: 16px;
-    height: 16px;
-    text-align: end;
     padding: 12px;
     background: #323542;
   }
@@ -105,10 +111,7 @@
     justify-content: center;
   }
 
-  &__content{
-    display: grid;
-    grid-column:  1/5;
-  }
+
 
 
 }
